--- a/support.html
+++ b/support.html
@@ -1,173 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DOOSH HUB</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Favicon -->
-  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
-
-  <!-- Open Graph Meta -->
-  <meta property="og:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
-  <meta property="og:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
-  <meta property="og:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
-  <meta property="og:url" content="https://www.dooshtoons.linkpc.net/" />
-  <meta property="og:type" content="website" />
-
-  <!-- Twitter Card Meta -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="DOOSH HUB - Watch Animes, Movies and More!" />
-  <meta name="twitter:description" content="Explore animes, movies, and series with fire neon vibes on DOOSH HUB." />
-  <meta name="twitter:image" content="https://www.dooshtoons.linkpc.net/Screenshot_2025-04-05-08-08-19-87.jpg" />
-
-  <style>
-    /* Neon Sparkling Animation */
-    @keyframes neonGlow {
-      0%, 100% {
-        text-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 40px #ff4500, 0 0 60px #ff4500;
-      }
-      50% {
-        text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000, 0 0 60px #ff4500, 0 0 80px #ff4500;
-      }
-    }
-
-    body {
-      background: #0f0f0f;
-      font-family: 'Roboto', sans-serif;
-      overflow-x: hidden;
-      color: white;
-      margin: 0;
-      padding: 0;
-    }
-
-    /* Header Styling */
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      z-index: 9999;
-      padding: 10px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    header img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-    }
-
-    /* Button */
-    .button {
-      background-color: #ff00ff;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      animation: neonGlow 1.5s infinite alternate;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
-    }
-
-    .button:hover {
-      background-color: #ff4500;
-    }
-
-    /* Main Content */
-    .main-content {
-      margin-top: 120px; /* This creates space below the fixed header */
-      padding: 20px;
-      text-align: center;
-    }
-
-    /* Discord Button */
-    #discordBtn {
-      position: fixed;
-      bottom: 80px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #7289da;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-size: 1.2rem;
-      text-align: center;
-      text-decoration: none;
-      animation: neonGlow 1.5s infinite alternate;
-      z-index: 9999;
-    }
-
-    #discordBtn:hover {
-      background-color: #5b6eae;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      margin-top: 50px;
-      font-size: 1rem;
-      color: white;
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 10px;
-    }
-
-    /* Ad Banner Styling */
-    .ad-banner {
-      margin-top: 20px;
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-
-    .ad-banner iframe {
-      border: none;
-      width: 468px;
-      height: 60px;
-    }
-
-    .ad-banner div {
-      width: 320px;
-      height: 50px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Support Us - Doosh Hub</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px;
+        }
+        .container {
+            width: 90%;
+            max-width: 1000px;
+            margin: 20px auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        .ads-section, .banner-section {
+            margin-top: 30px;
+        }
+        iframe {
+            display: block;
+            margin: 10px auto;
+            border: none;
+        }
+        .footer {
+            margin-top: 50px;
+            font-size: 14px;
+            color: #777;
+        }
+    </style>
 </head>
-
 <body>
 
-  <!-- Discord Button -->
-  <a id="discordBtn" href="https://discord.gg/Wj32meHh" target="_blank">Join Us on Discord</a>
+header>
+    <h1>Support Us - Doosh Hub</h1>
+</header>
 
-  <!-- Header with Logo and Button -->
-  <header id="header">
-    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Doosh Hub Logo" />
-    <a href="index.2.html" class="button">Go to Doosh Hub</a>
-  </header>
+<div class="container">
+    <div class="message">
+        <h2>Support Me – Your Help Means Everything</h2>
+        <p>Hello dear visitor,</p>
+        <p>First of all, thank you so much for considering supporting me. Your time and attention are incredibly valuable, and I'm truly grateful for your willingness to help. This website, and the work I create, wouldn't be possible without the support of kind people like you.</p>
 
-  <!-- Main Content -->
-  <div class="main-content">
-    <h1 class="text-4xl font-bold mb-6">About Doosh Hub</h1>
-    <p class="mb-4">Welcome to Doosh Hub — your ultimate gateway to global entertainment! Step into a world where Bollywood blockbusters, Hollywood hits, mesmerizing anime, heart-fluttering K-dramas, addictive C-dramas, and so much more come alive, all in one place.</p>
-    <p class="mb-4">At Doosh Hub, we don’t just bring you entertainment — we bring you experiences. Discover stories that thrill you, move you, and make you laugh out loud. Dive into action-packed adventures, soul-stirring dramas, and feel-good comedies, handpicked to match every mood and every moment.</p>
-    <p class="mb-4">Connect. Explore. Indulge. Join a vibrant community of fans from around the world, explore endless content, and lose yourself in the magic of your favorite movies, shows, and anime. Whatever your passion, Doosh Hub is where it all begins.</p>
-    <p class="mb-8">Your next binge-worthy obsession is just a click away. Welcome home!</p>
+        <h3>Important: Please Read Carefully</h3>
+        <ul>
+            <li>Do not download anything from ads.</li>
+            <li>Click responsibly and naturally.</li>
+            <li>Avoid spammy or suspicious links.</li>
+        </ul>
 
-    <!-- Support Buttons -->
-    <div class="flex justify-center gap-6">
-      <a href="support.html" class="button">Support Us</a>
-      <a href="copyright.html" class="button">Copyright Info</a>
+        <h3>A Few Simple Steps to Support:</h3>
+        <ol>
+            <li>Click on ads and wait 5 seconds before returning.</li>
+            <li>Multiple clicks are optional but appreciated!</li>
+        </ol>
+
+        <p>Thank you again for your support!</p>
+        <p><strong>Doosh Hub</strong></p>
+    </div>
+    <!-- Popunder Buttons -->
+    <div class="ads-section">
+        <button onclick="openAd('https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1')">Popunder Ad 1</button>
+        <button onclick="openAd('https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1')">Popunder Ad 2</button>
+        <button onclick="openAd('https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9')">Popunder Ad 3</button>
+        <button onclick="openAd('https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df')">Popunder Ad 4</button>
+        <button onclick="openAd('https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe')">Popunder Ad 5</button>
     </div>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Doosh Hub. All rights reserved. | <a href="contact.html" class="text-purple-500">Contact Us</a></p>
-  </footer>
+    <!-- Social Bar Button -->
+    <div class="ads-section">
+        <button onclick="loadSocialBar()">Load Social Bar</button>
+        <div id="social-bar"></div>
+    </div>
+
+    <!-- Banner Ads Section -->
+    <div class="banner-section">
+        <h3>Our Sponsors</h3>
+        
+        <!-- Banner 1 -->
+        <div id="banner1"></div>
+        <!-- Banner 2 -->
+        <div id="banner2"></div>
+        <!-- Banner 3 -->
+        <div id="banner3"></div>
+
+    </div>
+
+</div>
+
+<div class="footer">
+    <p>© 2025 Doosh Hub. All Rights Reserved.</p>
+</div>
+
+<script>
+function openAd(url) {
+    window.open(url, '_blank');
+}
+
+function loadSocialBar() {
+    var script = document.createElement('script');
+    script.src = '//pl26487838.profitableratecpm.com/b1/b5/3f/b1b53f67b160e09bda7bf4a781f629b2.js';
+    document.getElementById('social-bar').appendChild(script);
+}
+
+// Load banners initially
+loadBanners();
+
+// Reload banners every 5 seconds
+setInterval(loadBanners, 5000);
+
+function loadBanners() {
+    // Banner 1 (468x60)
+    document.getElementById('banner1').innerHTML = `
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '38c97041ba09133421880a5339a162a8',
+                'format' : 'iframe',
+                'height' : 60,
+                'width' : 468,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
+    `;
+
+    // Banner 2 (Native)
+    document.getElementById('banner2').innerHTML = `
+        <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+        <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
+    `;
+
+    // Banner 3 (320x50)
+    document.getElementById('banner3').innerHTML = `
+        <script type="text/javascript">
+            atOptions = {
+                'key' : 'dc2b98e1ad9fc907acb18e73b04f7c45',
+                'format' : 'iframe',
+                'height' : 50,
+                'width' : 320,
+                'params' : {}
+            };
+        </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/dc2b98e1ad9fc907acb18e73b04f7c45/invoke.js"></script>
+    `;
+}
+</script>
 
 </body>
 </html>
