--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <script>
     // Function to navigate to the support page
     function navigateToSupport() {
-      window.location.href = "Ssupport.html";
+      window.location.href = "support.html";
     }
   </script>
 </body>
