--- a/support.html
+++ b/support.html
@@ -1,130 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support Us - Doosh Hub</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-        }
-        .container {
-            width: 90%;
-            max-width: 1000px;
-            margin: 20px auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .ads-section, .banner-section {
-            margin-top: 30px;
-        }
-        iframe {
-            display: block;
-            margin: 10px auto;
-            border: none;
-        }
-        .footer {
-            margin-top: 50px;
-            font-size: 14px;
-            color: #777;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Support Us - Doosh Hub</title>
+  <style>
+    body {
+      font-family: 'Poppins', Arial, sans-serif;
+      background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      color: #333;
+    }
+    header {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      padding: 20px 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+    .container {
+      width: 90%;
+      max-width: 1100px;
+      margin: 30px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.15);
+      animation: fadeIn 1s ease-in-out;
+    }
+    button {
+      background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
+      color: white;
+      border: none;
+      padding: 12px 25px;
+      margin: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      border-radius: 50px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+    button:hover {
+      transform: scale(1.05);
+      background: linear-gradient(135deg, #ff7e5f 0%, #feb47b 100%);
+    }
+    .ads-section, .banner-section {
+      margin-top: 40px;
+    }
+    iframe {
+      display: block;
+      margin: 15px auto;
+      border: none;
+    }
+    .footer {
+      margin-top: 50px;
+      font-size: 14px;
+      color: #666;
+      padding-bottom: 20px;
+    }
+    ul, ol {
+      text-align: left;
+      display: inline-block;
+      margin: 10px auto;
+      font-size: 16px;
+    }
+    h2, h3 {
+      color: #444;
+    }
+    @keyframes fadeIn {
+      from {opacity: 0; transform: translateY(20px);}
+      to {opacity: 1; transform: translateY(0);}
+    }
+  </style>
 </head>
 <body>
 
-header>
-    <h1>Support Us - Doosh Hub</h1>
+<header>
+  <h1>Support Us - Doosh Hub</h1>
 </header>
 
 <div class="container">
-    <div class="message">
-        <h2>Support Me – Your Help Means Everything</h2>
-        <p>Hello dear visitor,</p>
-        <p>First of all, thank you so much for considering supporting me. Your time and attention are incredibly valuable, and I'm truly grateful for your willingness to help. This website, and the work I create, wouldn't be possible without the support of kind people like you.</p>
 
-        <h3>Important: Please Read Carefully</h3>
-        <ul>
-            <li>Do not download anything from ads.</li>
-            <li>Click responsibly and naturally.</li>
-            <li>Avoid spammy or suspicious links.</li>
-        </ul>
+  <div class="message">
+    <h2>Support Me – Your Help Means Everything</h2>
+    <p>Hello dear visitor,</p>
+    <p>First of all, thank you so much for considering supporting me. Your time and attention are incredibly valuable, and I'm truly grateful for your willingness to help. This website, and the work I create, wouldn't be possible without the support of kind people like you.</p>
 
-        <h3>A Few Simple Steps to Support:</h3>
-        <ol>
-            <li>Click on ads and wait 5 seconds before returning.</li>
-            <li>Multiple clicks are optional but appreciated!</li>
-        </ol>
+    <h3>Important: Please Read Carefully</h3>
+    <ul>
+      <li>Do not download anything from ads.</li>
+      <li>Click responsibly and naturally.</li>
+      <li>Avoid spammy or suspicious links.</li>
+    </ul>
 
-        <p>Thank you again for your support!</p>
-        <p><strong>Doosh Hub</strong></p>
-    </div>
-    <!-- Popunder Buttons -->
-    <div class="ads-section">
-        <button onclick="openAd('https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1')">Popunder Ad 1</button>
-        <button onclick="openAd('https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1')">Popunder Ad 2</button>
-        <button onclick="openAd('https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9')">Popunder Ad 3</button>
-        <button onclick="openAd('https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df')">Popunder Ad 4</button>
-        <button onclick="openAd('https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe')">Popunder Ad 5</button>
-    </div>
+    <h3>A Few Simple Steps to Support:</h3>
+    <ol>
+      <li>Click on ads and wait 5 seconds before returning.</li>
+      <li>Multiple clicks are optional but appreciated!</li>
+    </ol>
 
-    <!-- Social Bar Button -->
-    <div class="ads-section">
-        <button onclick="loadSocialBar()">Load Social Bar</button>
-        <div id="social-bar"></div>
-    </div>
+    <p>Thank you again for your support!</p>
+    <p><strong>Doosh Hub</strong></p>
+  </div>
 
-    <!-- Banner Ads Section -->
-    <div class="banner-section">
-        <h3>Our Sponsors</h3>
-        
-        <!-- Banner 1 -->
-        <div id="banner1"></div>
-        <!-- Banner 2 -->
-        <div id="banner2"></div>
-        <!-- Banner 3 -->
-        <div id="banner3"></div>
+  <!-- Popunder Buttons -->
+  <div class="ads-section">
+    <button onclick="openAd('https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1')">Popunder Ad 1</button>
+    <button onclick="openAd('https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1')">Popunder Ad 2</button>
+    <button onclick="openAd('https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9')">Popunder Ad 3</button>
+    <button onclick="openAd('https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df')">Popunder Ad 4</button>
+    <button onclick="openAd('https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe')">Popunder Ad 5</button>
+  </div>
 
-    </div>
+  <!-- Social Bar -->
+  <div class="ads-section">
+    <button onclick="loadSocialBar()">Load Social Bar</button>
+    <div id="social-bar"></div>
+  </div>
+
+  <!-- Banner Ads Section -->
+  <div class="banner-section">
+    <h3>Our Sponsors</h3>
+    <div id="banner1"></div>
+    <div id="banner2"></div>
+    <div id="banner3"></div>
+  </div>
 
 </div>
 
 <div class="footer">
-    <p>© 2025 Doosh Hub. All Rights Reserved.</p>
+  <p>© 2025 Doosh Hub. All Rights Reserved.</p>
 </div>
 
 <script>
 function openAd(url) {
-    window.open(url, '_blank');
+  window.open(url, '_blank');
 }
 
 function loadSocialBar() {
-    var script = document.createElement('script');
-    script.src = '//pl26487838.profitableratecpm.com/b1/b5/3f/b1b53f67b160e09bda7bf4a781f629b2.js';
-    document.getElementById('social-bar').appendChild(script);
+  var script = document.createElement('script');
+  script.src = '//pl26487838.profitableratecpm.com/b1/b5/3f/b1b53f67b160e09bda7bf4a781f629b2.js';
+  document.getElementById('social-bar').appendChild(script);
 }
 
 // Load banners initially
@@ -134,39 +152,50 @@ loadBanners();
 setInterval(loadBanners, 5000);
 
 function loadBanners() {
-    // Banner 1 (468x60)
-    document.getElementById('banner1').innerHTML = `
-        <script type="text/javascript">
-            atOptions = {
-                'key' : '38c97041ba09133421880a5339a162a8',
-                'format' : 'iframe',
-                'height' : 60,
-                'width' : 468,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
-    `;
+  document.getElementById('banner1').innerHTML = '';
+  document.getElementById('banner2').innerHTML = '';
+  document.getElementById('banner3').innerHTML = '';
 
-    // Banner 2 (Native)
-    document.getElementById('banner2').innerHTML = `
-        <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
-        <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
-    `;
+  var script1 = document.createElement('script');
+  script1.type = 'text/javascript';
+  script1.innerHTML = `
+    atOptions = {
+      'key': '38c97041ba09133421880a5339a162a8',
+      'format': 'iframe',
+      'height': 60,
+      'width': 468,
+      'params': {}
+    };
+  `;
+  var invoke1 = document.createElement('script');
+  invoke1.src = '//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js';
+  document.getElementById('banner1').appendChild(script1);
+  document.getElementById('banner1').appendChild(invoke1);
 
-    // Banner 3 (320x50)
-    document.getElementById('banner3').innerHTML = `
-        <script type="text/javascript">
-            atOptions = {
-                'key' : 'dc2b98e1ad9fc907acb18e73b04f7c45',
-                'format' : 'iframe',
-                'height' : 50,
-                'width' : 320,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/dc2b98e1ad9fc907acb18e73b04f7c45/invoke.js"></script>
-    `;
+  var script2 = document.createElement('script');
+  script2.async = true;
+  script2.setAttribute('data-cfasync', 'false');
+  script2.src = '//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js';
+  var container2 = document.createElement('div');
+  container2.id = 'container-9c8a5fd343f0c339fdb71a4da43f3a35';
+  document.getElementById('banner2').appendChild(script2);
+  document.getElementById('banner2').appendChild(container2);
+
+  var script3 = document.createElement('script');
+  script3.type = 'text/javascript';
+  script3.innerHTML = `
+    atOptions = {
+      'key': 'dc2b98e1ad9fc907acb18e73b04f7c45',
+      'format': 'iframe',
+      'height': 50,
+      'width': 320,
+      'params': {}
+    };
+  `;
+  var invoke3 = document.createElement('script');
+  invoke3.src = '//www.highperformanceformat.com/dc2b98e1ad9fc907acb18e73b04f7c45/invoke.js';
+  document.getElementById('banner3').appendChild(script3);
+  document.getElementById('banner3').appendChild(invoke3);
 }
 </script>
 
