--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <!-- Support Buttons -->
     <div class="flex justify-center gap-6">
-      <a href="Ssupport.html" class="button">Support Us</a>
+      <a href="support.html" class="button">Support Us</a>
       <a href="copyright.html" class="button">Copyright Info</a>
     </div>
   </div>
