--- a/support.html
+++ b/support.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: 'Poppins', Arial, sans-serif;
-      background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+      background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
       margin: 0;
       padding: 0;
       text-align: center;
@@ -73,6 +73,14 @@
       from {opacity: 0; transform: translateY(20px);}
       to {opacity: 1; transform: translateY(0);}
     }
+    .ad-banner {
+      margin: 15px auto;
+      background: #f9f9f9;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      width: fit-content;
+    }
   </style>
 </head>
 <body>
@@ -120,14 +128,15 @@
     <div id="social-bar"></div>
   </div>
 
-  <!-- Banner Ads Section -->
-  <div class="banner-section">
-    <h3>Our Sponsors</h3>
-    <div id="banner1"></div>
-    <div id="banner2"></div>
-    <div id="banner3"></div>
-  </div>
+</div>
 
+<!-- Banners at Bottom -->
+<div class="banner-section">
+  <div class="ad-banner" id="banner1"></div>
+  <div class="ad-banner" id="banner2"></div>
+  <div class="ad-banner" id="banner3"></div>
+  <div class="ad-banner" id="banner4"></div>
+  <div class="ad-banner" id="banner5"></div>
 </div>
 
 <div class="footer">
@@ -152,50 +161,28 @@ loadBanners();
 setInterval(loadBanners, 5000);
 
 function loadBanners() {
-  document.getElementById('banner1').innerHTML = '';
-  document.getElementById('banner2').innerHTML = '';
-  document.getElementById('banner3').innerHTML = '';
+  for (let i = 1; i <= 5; i++) {
+    const bannerDiv = document.getElementById('banner' + i);
+    bannerDiv.innerHTML = ''; // Clear previous
 
-  var script1 = document.createElement('script');
-  script1.type = 'text/javascript';
-  script1.innerHTML = `
-    atOptions = {
-      'key': '38c97041ba09133421880a5339a162a8',
-      'format': 'iframe',
-      'height': 60,
-      'width': 468,
-      'params': {}
-    };
-  `;
-  var invoke1 = document.createElement('script');
-  invoke1.src = '//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js';
-  document.getElementById('banner1').appendChild(script1);
-  document.getElementById('banner1').appendChild(invoke1);
+    let scriptAtOptions = document.createElement('script');
+    scriptAtOptions.type = 'text/javascript';
+    scriptAtOptions.innerHTML = `
+      atOptions = {
+        'key': '38c97041ba09133421880a5339a162a8',
+        'format': 'iframe',
+        'height': 60,
+        'width': 468,
+        'params': {}
+      };
+    `;
 
-  var script2 = document.createElement('script');
-  script2.async = true;
-  script2.setAttribute('data-cfasync', 'false');
-  script2.src = '//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js';
-  var container2 = document.createElement('div');
-  container2.id = 'container-9c8a5fd343f0c339fdb71a4da43f3a35';
-  document.getElementById('banner2').appendChild(script2);
-  document.getElementById('banner2').appendChild(container2);
+    let scriptInvoke = document.createElement('script');
+    scriptInvoke.src = '//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js';
 
-  var script3 = document.createElement('script');
-  script3.type = 'text/javascript';
-  script3.innerHTML = `
-    atOptions = {
-      'key': 'dc2b98e1ad9fc907acb18e73b04f7c45',
-      'format': 'iframe',
-      'height': 50,
-      'width': 320,
-      'params': {}
-    };
-  `;
-  var invoke3 = document.createElement('script');
-  invoke3.src = '//www.highperformanceformat.com/dc2b98e1ad9fc907acb18e73b04f7c45/invoke.js';
-  document.getElementById('banner3').appendChild(script3);
-  document.getElementById('banner3').appendChild(invoke3);
+    bannerDiv.appendChild(scriptAtOptions);
+    bannerDiv.appendChild(scriptInvoke);
+  }
 }
 </script>
 
