--- a/support.html
+++ b/support.html
@@ -53,6 +53,8 @@
       display: block;
       margin: 15px auto;
       border: none;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     .footer {
       margin-top: 50px;
@@ -78,8 +80,8 @@
       background: #f9f9f9;
       padding: 10px;
       border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      width: fit-content;
+      width: 480px;
+      max-width: 90%;
     }
   </style>
 </head>
@@ -132,11 +134,11 @@
 
 <!-- Banners at Bottom -->
 <div class="banner-section">
-  <div class="ad-banner" id="banner1"></div>
-  <div class="ad-banner" id="banner2"></div>
-  <div class="ad-banner" id="banner3"></div>
-  <div class="ad-banner" id="banner4"></div>
-  <div class="ad-banner" id="banner5"></div>
+  <div class="ad-banner"><iframe id="banner1" width="468" height="60"></iframe></div>
+  <div class="ad-banner"><iframe id="banner2" width="468" height="60"></iframe></div>
+  <div class="ad-banner"><iframe id="banner3" width="468" height="60"></iframe></div>
+  <div class="ad-banner"><iframe id="banner4" width="468" height="60"></iframe></div>
+  <div class="ad-banner"><iframe id="banner5" width="468" height="60"></iframe></div>
 </div>
 
 <div class="footer">
@@ -161,27 +163,23 @@ loadBanners();
 setInterval(loadBanners, 5000);
 
 function loadBanners() {
+  const bannerSrc = 'https://www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js';
   for (let i = 1; i <= 5; i++) {
-    const bannerDiv = document.getElementById('banner' + i);
-    bannerDiv.innerHTML = ''; // Clear previous
-
-    let scriptAtOptions = document.createElement('script');
-    scriptAtOptions.type = 'text/javascript';
-    scriptAtOptions.innerHTML = `
-      atOptions = {
-        'key': '38c97041ba09133421880a5339a162a8',
-        'format': 'iframe',
-        'height': 60,
-        'width': 468,
-        'params': {}
-      };
+    const iframe = document.getElementById('banner' + i);
+    iframe.srcdoc = `
+      <html><body style="margin:0;padding:0;">
+        <script type="text/javascript">
+          atOptions = {
+            'key' : '38c97041ba09133421880a5339a162a8',
+            'format' : 'iframe',
+            'height' : 60,
+            'width' : 468,
+            'params' : {}
+          };
+        </script>
+        <script type="text/javascript" src="${bannerSrc}"></script>
+      </body></html>
     `;
-
-    let scriptInvoke = document.createElement('script');
-    scriptInvoke.src = '//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js';
-
-    bannerDiv.appendChild(scriptAtOptions);
-    bannerDiv.appendChild(scriptInvoke);
   }
 }
 </script>
