--- a/support.html
+++ b/support.html
@@ -1,188 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Support Us - Doosh Hub</title>
   <style>
     body {
-      font-family: 'Poppins', Arial, sans-serif;
-      background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom right, #ffe5ec, #ffd6f6);
       margin: 0;
       padding: 0;
       text-align: center;
       color: #333;
     }
     header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background-color: #ff6f91;
       color: white;
-      padding: 20px 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+      padding: 15px 10px;
+      font-size: 24px;
     }
     .container {
-      width: 90%;
-      max-width: 1100px;
-      margin: 30px auto;
+      width: 95%;
+      max-width: 1000px;
+      margin: 20px auto;
       background: white;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.15);
-      animation: fadeIn 1s ease-in-out;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
     button {
-      background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
+      background: linear-gradient(to right, #ff758c, #ff7eb3);
       color: white;
       border: none;
-      padding: 12px 25px;
+      padding: 10px 20px;
       margin: 10px;
-      font-size: 18px;
-      font-weight: bold;
-      border-radius: 50px;
+      font-size: 16px;
+      border-radius: 5px;
       cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
     button:hover {
-      transform: scale(1.05);
-      background: linear-gradient(135deg, #ff7e5f 0%, #feb47b 100%);
+      background: linear-gradient(to right, #ff5c85, #ff6cae);
     }
-    .ads-section, .banner-section {
-      margin-top: 40px;
-    }
-    iframe {
-      display: block;
-      margin: 15px auto;
-      border: none;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    .ads-section {
+      margin-top: 30px;
     }
     .footer {
-      margin-top: 50px;
+      margin: 40px 0 20px;
       font-size: 14px;
-      color: #666;
-      padding-bottom: 20px;
-    }
-    ul, ol {
-      text-align: left;
-      display: inline-block;
-      margin: 10px auto;
-      font-size: 16px;
-    }
-    h2, h3 {
-      color: #444;
-    }
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(20px);}
-      to {opacity: 1; transform: translateY(0);}
+      color: #555;
     }
     .ad-banner {
       margin: 15px auto;
-      background: #f9f9f9;
-      padding: 10px;
+      width: 468px;
+      height: 60px;
+      background: #fff;
       border-radius: 10px;
-      width: 480px;
-      max-width: 90%;
+      overflow: hidden;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .ad-banner iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    ul, ol {
+      text-align: left;
+      max-width: 700px;
+      margin: 10px auto;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Support Us - Doosh Hub</h1>
-</header>
+  <header>
+    Support Us - Doosh Hub
+  </header>
 
-<div class="container">
+  <div class="container">
+    <div class="message">
+      <h2>Support Me – Your Help Means Everything</h2>
+      <p>Hello dear visitor,</p>
+      <p>Thank you for considering supporting me. This website wouldn't be possible without kind people like you.</p>
 
-  <div class="message">
-    <h2>Support Me – Your Help Means Everything</h2>
-    <p>Hello dear visitor,</p>
-    <p>First of all, thank you so much for considering supporting me. Your time and attention are incredibly valuable, and I'm truly grateful for your willingness to help. This website, and the work I create, wouldn't be possible without the support of kind people like you.</p>
+      <h3>Important: Please Read Carefully</h3>
+      <ul>
+        <li>Do not download anything from ads.</li>
+        <li>Click responsibly and naturally.</li>
+        <li>Avoid spammy or suspicious links.</li>
+      </ul>
 
-    <h3>Important: Please Read Carefully</h3>
-    <ul>
-      <li>Do not download anything from ads.</li>
-      <li>Click responsibly and naturally.</li>
-      <li>Avoid spammy or suspicious links.</li>
-    </ul>
+      <h3>Steps to Support:</h3>
+      <ol>
+        <li>Click on ads and wait 5 seconds before returning.</li>
+        <li>Multiple clicks are optional but appreciated!</li>
+      </ol>
 
-    <h3>A Few Simple Steps to Support:</h3>
-    <ol>
-      <li>Click on ads and wait 5 seconds before returning.</li>
-      <li>Multiple clicks are optional but appreciated!</li>
-    </ol>
+      <p><strong>Thank you again!</strong></p>
+    </div>
 
-    <p>Thank you again for your support!</p>
-    <p><strong>Doosh Hub</strong></p>
+    <!-- Popunder Buttons -->
+    <div class="ads-section">
+      <button onclick="openAd('https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1')">Popunder Ad 1</button>
+      <button onclick="openAd('https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1')">Popunder Ad 2</button>
+      <button onclick="openAd('https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9')">Popunder Ad 3</button>
+      <button onclick="openAd('https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df')">Popunder Ad 4</button>
+      <button onclick="openAd('https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe')">Popunder Ad 5</button>
+    </div>
+
+    <!-- Social Bar Button -->
+    <div class="ads-section">
+      <button onclick="loadSocialBar()">Load Social Bar</button>
+      <div id="social-bar"></div>
+    </div>
   </div>
 
-  <!-- Popunder Buttons -->
+  <!-- Banner Ads (Simulated with iframe) -->
   <div class="ads-section">
-    <button onclick="openAd('https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1')">Popunder Ad 1</button>
-    <button onclick="openAd('https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1')">Popunder Ad 2</button>
-    <button onclick="openAd('https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9')">Popunder Ad 3</button>
-    <button onclick="openAd('https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df')">Popunder Ad 4</button>
-    <button onclick="openAd('https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe')">Popunder Ad 5</button>
+    <div class="ad-banner" id="ad1"></div>
+    <div class="ad-banner" id="ad2"></div>
+    <div class="ad-banner" id="ad3"></div>
+    <div class="ad-banner" id="ad4"></div>
+    <div class="ad-banner" id="ad5"></div>
   </div>
 
-  <!-- Social Bar -->
-  <div class="ads-section">
-    <button onclick="loadSocialBar()">Load Social Bar</button>
-    <div id="social-bar"></div>
+  <div class="footer">
+    © 2025 Doosh Hub. All Rights Reserved.
   </div>
 
-</div>
+  <script>
+    function openAd(url) {
+      window.open(url, '_blank');
+    }
 
-<!-- Banners at Bottom -->
-<div class="banner-section">
-  <div class="ad-banner"><iframe id="banner1" width="468" height="60"></iframe></div>
-  <div class="ad-banner"><iframe id="banner2" width="468" height="60"></iframe></div>
-  <div class="ad-banner"><iframe id="banner3" width="468" height="60"></iframe></div>
-  <div class="ad-banner"><iframe id="banner4" width="468" height="60"></iframe></div>
-  <div class="ad-banner"><iframe id="banner5" width="468" height="60"></iframe></div>
-</div>
+    function loadSocialBar() {
+      var script = document.createElement('script');
+      script.src = '//pl26487838.profitableratecpm.com/b1/b5/3f/b1b53f67b160e09bda7bf4a781f629b2.js';
+      document.getElementById('social-bar').appendChild(script);
+    }
 
-<div class="footer">
-  <p>© 2025 Doosh Hub. All Rights Reserved.</p>
-</div>
+    const bannerLinks = [
+      'https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1',
+      'https://www.profitableratecpm.com/zstjddy20y?key=bd80ed79e02a9b21793e8253c54d4ec1',
+      'https://www.profitableratecpm.com/zwdx8nvb?key=00fcac8229b5807d1b638c111f5273f9',
+      'https://www.profitableratecpm.com/sf9h6ikx?key=25d87d94939190ddff9fa5cb0edf81df',
+      'https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe'
+    ];
 
-<script>
-function openAd(url) {
-  window.open(url, '_blank');
-}
+    function loadBanners() {
+      for (let i = 0; i < 5; i++) {
+        document.getElementById('ad' + (i + 1)).innerHTML =
+          `<iframe src="${bannerLinks[i]}" loading="lazy"></iframe>`;
+      }
+    }
 
-function loadSocialBar() {
-  var script = document.createElement('script');
-  script.src = '//pl26487838.profitableratecpm.com/b1/b5/3f/b1b53f67b160e09bda7bf4a781f629b2.js';
-  document.getElementById('social-bar').appendChild(script);
-}
-
-// Load banners initially
-loadBanners();
-
-// Reload banners every 5 seconds
-setInterval(loadBanners, 5000);
-
-function loadBanners() {
-  const bannerSrc = 'https://www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js';
-  for (let i = 1; i <= 5; i++) {
-    const iframe = document.getElementById('banner' + i);
-    iframe.srcdoc = `
-      <html><body style="margin:0;padding:0;">
-        <script type="text/javascript">
-          atOptions = {
-            'key' : '38c97041ba09133421880a5339a162a8',
-            'format' : 'iframe',
-            'height' : 60,
-            'width' : 468,
-            'params' : {}
-          };
-        </script>
-        <script type="text/javascript" src="${bannerSrc}"></script>
-      </body></html>
-    `;
-  }
-}
-</script>
+    loadBanners();
+    setInterval(loadBanners, 5000);
+  </script>
 
 </body>
 </html>
