--- a/support.html
+++ b/support.html
@@ -54,13 +54,12 @@
       border-radius: 12px;
       overflow: hidden;
       box-shadow: 0 0 12px rgba(0,0,0,0.15);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: bold;
-      color: #ff4081;
+    }
+    .ad-banner iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 12px;
     }
     .footer {
       margin: 40px 0 20px;
@@ -120,14 +119,11 @@
 
   <!-- Banner Ads Section -->
   <div class="ads-section">
-    <div class="ad-banner" id="ad1">Loading...</div>
-    <div class="ad-banner" id="ad2">Loading...</div>
-    <div class="ad-banner" id="ad3">Loading...</div>
-    <div class="ad-banner" id="ad4">Loading...</div>
-    <div class="ad-banner" id="ad5">Loading...</div>
-    <div class="ad-banner" id="ad6">Loading...</div>
-    <div class="ad-banner" id="ad7">Loading...</div>
-    <div class="ad-banner" id="ad8">Loading...</div>
+    <div class="ad-banner"><iframe id="frame1" src=""></iframe></div>
+    <div class="ad-banner"><iframe id="frame2" src=""></iframe></div>
+    <div class="ad-banner"><iframe id="frame3" src=""></iframe></div>
+    <div class="ad-banner"><iframe id="frame4" src=""></iframe></div>
+    <div class="ad-banner"><iframe id="frame5" src=""></iframe></div>
   </div>
 
   <div class="footer">
@@ -153,19 +149,16 @@
       'https://www.profitableratecpm.com/qusnb8n8?key=d965c8699553fa2a225881c92e8494fe'
     ];
 
-    function refreshBanners() {
-      for (let i = 1; i <= 8; i++) {
-        const banner = document.getElementById('ad' + i);
+    function refreshIframes() {
+      for (let i = 1; i <= 5; i++) {
+        const frame = document.getElementById('frame' + i);
         const randomLink = bannerLinks[Math.floor(Math.random() * bannerLinks.length)];
-        banner.innerHTML = "Click Here To Support";
-        banner.onclick = function() {
-          window.open(randomLink, '_blank');
-        }
+        frame.src = randomLink;
       }
     }
 
-    refreshBanners();
-    setInterval(refreshBanners, 7000); // refresh every 7 seconds
+    refreshIframes(); // Initial load
+    setInterval(refreshIframes, 15000); // Refresh every 15 seconds
   </script>
 
 </body>
