--- a/anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html
+++ b/anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html
@@ -12,6 +12,7 @@
       right: 20px;
       width: 90vw;
       max-width: 728px;
+      min-width: 300px;
       background-color: #374151;
       padding: 12px;
       border-radius: 8px;
@@ -38,16 +39,18 @@
     }
   </style>
 </head>
+
 <body class="bg-black text-white font-mono">
 
-  <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Moviee</h1>
+  <div class="p-4 sm:p-6 max-w-screen-md mx-auto">
+    <h1 class="text-4xl font-bold text-pink-600 mb-4">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</h1>
     <p class="text-gray-400 mb-6">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</p>
 
     <!-- Video Player -->
-    <div class="mb-4">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1KGNROxdHFt2QeWo6mDaqylQy3AhYUSOP/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-      <div class="mt-2">
+    <div class="mb-6">
+      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1KGNROxdHFt2QeWo6mDaqylQy3AhYUSOP/preview"
+        class="rounded shadow w-full aspect-video" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+      <div class="mt-4">
         <h2 id="episodeTitle" class="text-xl font-semibold">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</h2>
         <p id="episodeDesc" class="text-gray-400">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
@@ -55,10 +58,10 @@
     </div>
 
     <!-- Episode List -->
-    <div id="episodeList" class="space-y-3"></div>
+    <div id="episodeList" class="space-y-3 mb-8"></div>
 
     <!-- New Separate Ad Placement -->
-    <div class="mt-6">
+    <div class="mt-8">
       <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
       <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
     </div>
