--- a/anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html
+++ b/anime/Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie.html
@@ -3,106 +3,100 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</title>
+  <title>Forbidden Fairytale 2025 - Hindi Dubbed Full Movie</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    /* Responsive Aspect Ratio for iframe */
+    .aspect-w-16 {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%;
+    }
+    .aspect-w-16 iframe {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0; left: 0;
+    }
+
+    /* Floating Ad Box */
     #adBox {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 90vw;
-      max-width: 728px;
-      min-width: 300px;
+      bottom: 1rem;
+      right: 1rem;
+      width: 90%;
+      max-width: 360px;
       background-color: #374151;
       padding: 12px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+      border-radius: 0.75rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
       z-index: 1000;
       cursor: move;
-      transition: opacity 0.5s ease;
+      transition: opacity 0.3s ease;
     }
-    .ad-slot { display: none; }
-    .ad-slot.active { display: block; }
-    #closeAd {
-      position: absolute;
-      top: 6px;
-      right: 8px;
-      background: transparent;
-      border: none;
-      color: white;
-      font-size: 1.25rem;
-      line-height: 1;
-      cursor: pointer;
-    }
-    @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; }
+
+    /* Adjust adBox on larger screens */
+    @media (min-width: 640px) {
+      #adBox {
+        max-width: 728px;
+      }
     }
   </style>
 </head>
 
 <body class="bg-black text-white font-mono">
 
-  <div class="p-4 sm:p-6 max-w-screen-md mx-auto">
-    <h1 class="text-4xl font-bold text-pink-600 mb-4">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</h1>
-    <p class="text-gray-400 mb-6">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</p>
+  <div class="p-4 sm:p-6 w-full max-w-4xl mx-auto">
+    <h1 class="text-2xl sm:text-4xl font-bold text-pink-600 mb-4 text-center sm:text-left">
+      Forbidden Fairytale 2025 - Hindi Dubbed
+    </h1>
+    <p class="text-gray-400 mb-6 text-center sm:text-left">
+      Full Movie | Hindi Dubbed | Watch Now
+    </p>
 
     <!-- Video Player -->
     <div class="mb-6">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1KGNROxdHFt2QeWo6mDaqylQy3AhYUSOP/preview"
-        class="rounded shadow w-full aspect-video" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+      <div class="aspect-w-16">
+        <iframe id="videoPlayer"
+          src="https://drive.google.com/file/d/1KGNROxdHFt2QeWo6mDaqylQy3AhYUSOP/preview"
+          class="rounded shadow" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+      </div>
       <div class="mt-4">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</h2>
-        <p id="episodeDesc" class="text-gray-400">Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie</p>
-        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
+        <h2 id="episodeTitle" class="text-lg sm:text-xl font-semibold">Forbidden Fairytale 2025</h2>
+        <p id="episodeDesc" class="text-gray-400">Full Hindi Dubbed Movie hosted on Google Drive.</p>
+        <p id="uploadDate" class="text-gray-500 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
 
     <!-- Episode List -->
     <div id="episodeList" class="space-y-3 mb-8"></div>
 
-    <!-- New Separate Ad Placement -->
-    <div class="mt-8">
-      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
-      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
+    <!-- Inline Ad (Mobile friendly) -->
+    <div class="my-8">
+      <div class="w-full max-w-md mx-auto">
+        <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+        <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
+      </div>
     </div>
-
   </div>
 
-  <!-- Ad Box (old rotating ads) -->
+  <!-- Floating Ad Box -->
   <div id="adBox">
-    <button id="closeAd" aria-label="Close ad">×</button>
-    <div class="ad-slot active" id="ad1">
-      <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
-      </iframe>
-    </div>
-    <div class="ad-slot" id="ad2">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '38c97041ba09133421880a5339a162a8',
-          'format': 'iframe',
-          'height': 90,
-          'width': 728,
-          'params': {}
-        };
-      </script>
-      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
+    <button id="closeAd" class="absolute top-2 right-3 text-white text-xl">×</button>
+    <div class="w-full">
+      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
+        class="w-full h-24 rounded" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
   </div>
 
-  <script type="text/javascript">
-    window.onbeforeunload = null;
-
+  <!-- JavaScript Section -->
+  <script>
+    // Video episodes (future support if needed)
     const episodes = [
       {
-        title: "Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie",
+        title: "Forbidden Fairytale 2025 - Hindi Dubbed",
         link: "https://drive.google.com/file/d/1KGNROxdHFt2QeWo6mDaqylQy3AhYUSOP/preview",
-        description: "Forbidden_Fairytale_2025_Hindi_Dubbed_Full_Movie",
+        description: "Full Hindi Dubbed Movie hosted on Google Drive.",
         uploadDate: "2025-04-25"
       }
     ];
@@ -126,15 +120,7 @@
       list.appendChild(btn);
     });
 
-    // Rotate ads
-    let currentAd = 1;
-    setInterval(() => {
-      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
-      currentAd = currentAd === 1 ? 2 : 1;
-      document.getElementById(`ad${currentAd}`).classList.add('active');
-    }, 10000);
-
-    // Draggable Ad Box
+    // Draggable Floating Ad
     (function() {
       const box = document.getElementById('adBox');
       let offsetX, offsetY, dragging = false;
@@ -157,10 +143,11 @@
       });
     })();
 
-    // Close ad
+    // Close floating ad
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
   </script>
+
 </body>
 </html>
