--- a/anime/Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed.html
+++ b/anime/Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed</title>
+  <title>Avengers Endgame (2019) Dual Audio Hindi Dubbed</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     #adBox {
@@ -34,38 +34,44 @@
       cursor: pointer;
     }
     @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; }
+      #adBox { bottom: 1rem; right: 1rem; width: 95vw; }
     }
   </style>
 </head>
 <body class="bg-black text-white font-mono">
 
-  <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed</h1>
-    <p class="text-gray-400 mb-6">Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed</p>
+  <div class="max-w-5xl mx-auto p-4 sm:p-6">
+    <header class="mb-6">
+      <h1 class="text-3xl sm:text-4xl font-bold text-pink-600">Avengers Endgame (2019) Dual Audio Hindi Dubbed</h1>
+      <p class="text-gray-400 mt-1">Watch the full movie online in high quality</p>
+    </header>
 
-    <!-- Video Player -->
-    <div class="mb-4">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/19RxOyFnQIZLhpTgEYSfpa1J_O_jnNra4/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-      <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed</h2>
-        <p id="episodeDesc" class="text-gray-400">Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed</p>
-        <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
+    <!-- Video Player Section -->
+    <section class="mb-8">
+      <div class="aspect-video bg-gray-800 rounded shadow overflow-hidden">
+        <iframe id="videoPlayer" src="https://drive.google.com/file/d/19RxOyFnQIZLhpTgEYSfpa1J_O_jnNra4/preview" width="100%" height="100%" frameborder="0" allow="autoplay" allowfullscreen></iframe>
       </div>
-    </div>
+      <div class="mt-4">
+        <h2 id="episodeTitle" class="text-xl font-semibold">Avengers Endgame (2019)</h2>
+        <p id="episodeDesc" class="text-gray-400">Dual Audio - Hindi Dubbed</p>
+        <p id="uploadDate" class="text-gray-500 text-sm">Uploaded: 2025-04-25</p>
+      </div>
+    </section>
 
     <!-- Episode List -->
-    <div id="episodeList" class="space-y-3"></div>
+    <section class="mb-8">
+      <h3 class="text-lg font-semibold mb-2">Available Versions:</h3>
+      <div id="episodeList" class="space-y-3"></div>
+    </section>
 
-    <!-- New Separate Ad Placement -->
-    <div class="mt-6">
-      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+    <!-- Inline Ad -->
+    <section class="mt-10">
       <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
-    </div>
-
+      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+    </section>
   </div>
 
-  <!-- Ad Box (old rotating ads) -->
+  <!-- Rotating Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
@@ -93,13 +99,12 @@
   </div>
 
   <script type="text/javascript">
-    window.onbeforeunload = null;
-
+    // Episode data
     const episodes = [
       {
-        title: "Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed",
+        title: "Avengers Endgame (2019) Dual Audio Hindi Dubbed",
         link: "https://drive.google.com/file/d/19RxOyFnQIZLhpTgEYSfpa1J_O_jnNra4/preview",
-        description: "Avengers_Endgame_2019_Dual_Audio_Hindi_Dubbed",
+        description: "Dual Audio - Hindi Dubbed",
         uploadDate: "2025-04-25"
       }
     ];
@@ -123,7 +128,7 @@
       list.appendChild(btn);
     });
 
-    // Rotate ads
+    // Ad Rotation
     let currentAd = 1;
     setInterval(() => {
       document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
@@ -132,7 +137,7 @@
     }, 10000);
 
     // Draggable Ad Box
-    (function() {
+    (() => {
       const box = document.getElementById('adBox');
       let offsetX, offsetY, dragging = false;
       box.addEventListener('mousedown', e => {
@@ -154,7 +159,7 @@
       });
     })();
 
-    // Close ad
+    // Close ad button
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
