Update FLIGHT 914 - Hollywood Action Movie Hindi  .html

--- a/anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html
+++ b/anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</title>
+  <title>Eternals (2021) - Dual Audio Hindi Dubbed</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     #adBox {
@@ -18,6 +18,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.4);
       z-index: 1000;
       cursor: move;
+      transition: opacity 0.5s ease;
     }
     .ad-slot { display: none; }
     .ad-slot.active { display: block; }
@@ -29,7 +30,6 @@
       border: none;
       color: white;
       font-size: 1.25rem;
-      line-height: 1;
       cursor: pointer;
     }
     @media (max-width: 640px) {
@@ -39,48 +39,36 @@
 </head>
 <body class="bg-black text-white font-mono">
 
-  <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</h1>
-    <p class="text-gray-400 mb-6">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</p>
+  <div class="max-w-4xl mx-auto p-6">
+    <h1 class="text-4xl font-bold text-pink-600 mb-2">Eternals (2021) - Dual Audio Hindi Dubbed</h1>
+    <p class="text-gray-400 mb-6">Full Movie in Hindi and English | 2021 | HD Quality</p>
 
     <!-- Video Player -->
-    <div class="mb-4">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/1GxOd4-9VDTDAgZ83pfC4POVLX8e0Llh1/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-      <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">FLIGHT 914 - Hollywood Action Movie Hindi Dubbed</h2>
-        <p id="episodeDesc" class="text-gray-400 whitespace-pre-line">
-FLIGHT 914
-In the skies, no one can hear you disappear.
-
-In 1955, Flight 914 took off from New York — and vanished without a trace. Now, 37 years later, it reappears in the skies over Miami... untouched, unchanged, and carrying passengers who haven't aged a day.
-
-When government forces race to contain the mystery, a daring air marshal, a rebellious journalist, and a lone survivor must uncover the terrifying truth: Flight 914 didn’t just get lost... it crossed into a hidden dimension controlled by forces beyond imagination.
-
-With time running out and powerful enemies closing in, the battle to reveal the secret of Flight 914 will take them across continents — and into the heart of a conspiracy that could change the world forever.
-
-Get ready for non-stop action, breathtaking aerial battles, and a mystery that will keep you guessing till the final descent.
-
-Flight 914 — some journeys were never meant to end.
-        </p>
+    <div class="mb-6">
+      <iframe id="videoPlayer" src="https://drive.google.com/file/d/17zoIfgez8UJaeKTFeO2yUYxp-wwEsH9r/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
+      <div class="mt-3">
+        <h2 id="episodeTitle" class="text-xl font-semibold">Eternals (2021) - Dual Audio</h2>
+        <p id="episodeDesc" class="text-gray-400">Enjoy the full movie dubbed in Hindi and English.</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
 
     <!-- Episode List -->
     <div id="episodeList" class="space-y-3"></div>
+
+    <!-- New Ad Placement -->
+    <div class="mt-8">
+      <script async data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
+    </div>
   </div>
 
-  <!-- Ad Box -->
+  <!-- Floating Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
-      <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
+      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
+        width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen>
       </iframe>
     </div>
     <div class="ad-slot" id="ad2">
@@ -97,27 +85,14 @@ Flight 914 — some journeys were never meant to end.
     </div>
   </div>
 
-  <script type="text/javascript">
-    window.onbeforeunload = null; // remove "leave site?" prompt
-
+  <script>
     const episodes = [
       {
-        title: "FLIGHT 914 - Hollywood Action Movie Hindi Dubbed",
-        link: "https://drive.google.com/file/d/1GxOd4-9VDTDAgZ83pfC4POVLX8e0Llh1/preview",
-        description: `FLIGHT 914
-In the skies, no one can hear you disappear.
-
-In 1955, Flight 914 took off from New York — and vanished without a trace. Now, 37 years later, it reappears in the skies over Miami... untouched, unchanged, and carrying passengers who haven't aged a day.
-
-When government forces race to contain the mystery, a daring air marshal, a rebellious journalist, and a lone survivor must uncover the terrifying truth: Flight 914 didn’t just get lost... it crossed into a hidden dimension controlled by forces beyond imagination.
-
-With time running out and powerful enemies closing in, the battle to reveal the secret of Flight 914 will take them across continents — and into the heart of a conspiracy that could change the world forever.
-
-Get ready for non-stop action, breathtaking aerial battles, and a mystery that will keep you guessing till the final descent.
-
-Flight 914 — some journeys were never meant to end.`,
+        title: "Eternals (2021) - Dual Audio Hindi Dubbed",
+        link: "https://drive.google.com/file/d/17zoIfgez8UJaeKTFeO2yUYxp-wwEsH9r/preview",
+        description: "Full Movie dubbed in Hindi and English, HD Quality",
         uploadDate: "2025-04-25"
-      },
+      }
     ];
 
     const list = document.getElementById('episodeList');
@@ -147,8 +122,8 @@ Flight 914 — some journeys were never meant to end.`,
       document.getElementById(`ad${currentAd}`).classList.add('active');
     }, 10000);
 
-    // Draggable
-    (function() {
+    // Draggable Ad Box
+    (() => {
       const box = document.getElementById('adBox');
       let offsetX, offsetY, dragging = false;
       box.addEventListener('mousedown', e => {
@@ -162,7 +137,7 @@ Flight 914 — some journeys were never meant to end.`,
         box.style.left = `${e.clientX - offsetX}px`;
         box.style.top = `${e.clientY - offsetY}px`;
         box.style.bottom = 'auto';
-        box.style.right  = 'auto';
+        box.style.right = 'auto';
       });
       document.addEventListener('mouseup', () => {
         dragging = false;
