--- a/anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html
+++ b/anime/FLIGHT 914 - Hollywood Action Movie Hindi  .html
@@ -33,46 +33,50 @@
       cursor: pointer;
     }
     @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; }
+      #adBox { bottom: 1rem; right: 1rem; width: calc(100vw - 2rem); }
     }
   </style>
 </head>
 <body class="bg-black text-white font-mono">
 
-  <div class="max-w-4xl mx-auto p-6">
-    <h1 class="text-4xl font-bold text-pink-600 mb-2">Eternals (2021) - Dual Audio Hindi Dubbed</h1>
-    <p class="text-gray-400 mb-6">Full Movie in Hindi and English | 2021 | HD Quality</p>
+  <main class="max-w-4xl mx-auto p-4 sm:p-6">
+    <header class="mb-6">
+      <h1 class="text-3xl sm:text-4xl font-bold text-pink-600">Eternals (2021) - Dual Audio Hindi Dubbed</h1>
+      <p class="text-gray-400">Full Movie in Hindi and English | 2021 | HD Quality</p>
+    </header>
 
-    <!-- Video Player -->
-    <div class="mb-6">
-      <iframe id="videoPlayer" src="https://drive.google.com/file/d/17zoIfgez8UJaeKTFeO2yUYxp-wwEsH9r/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-      <div class="mt-3">
+    <!-- Video Player Section -->
+    <section class="mb-8">
+      <div class="aspect-w-16 aspect-h-9">
+        <iframe id="videoPlayer" src="https://drive.google.com/file/d/17zoIfgez8UJaeKTFeO2yUYxp-wwEsH9r/preview"
+          class="w-full h-[400px] rounded shadow" frameborder="0" allow="autoplay" allowfullscreen></iframe>
+      </div>
+      <div class="mt-4">
         <h2 id="episodeTitle" class="text-xl font-semibold">Eternals (2021) - Dual Audio</h2>
         <p id="episodeDesc" class="text-gray-400">Enjoy the full movie dubbed in Hindi and English.</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
-    </div>
+    </section>
 
-    <!-- Episode List -->
-    <div id="episodeList" class="space-y-3"></div>
+    <!-- Episode Buttons -->
+    <section id="episodeList" class="space-y-3 mb-10"></section>
 
-    <!-- New Ad Placement -->
-    <div class="mt-8">
+    <!-- Inline Ad Placement -->
+    <section class="mt-8">
       <script async data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
       <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
-    </div>
-  </div>
+    </section>
+  </main>
 
-  <!-- Floating Ad Box -->
+  <!-- Floating Draggable Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
       <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
-        width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen>
-      </iframe>
+        width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
     <div class="ad-slot" id="ad2">
-      <script type="text/javascript">
+      <script>
         atOptions = {
           'key': '38c97041ba09133421880a5339a162a8',
           'format': 'iframe',
@@ -85,6 +89,7 @@
     </div>
   </div>
 
+  <!-- Scripts -->
   <script>
     const episodes = [
       {
@@ -114,7 +119,7 @@
       list.appendChild(btn);
     });
 
-    // Rotate ads
+    // Ad Rotation
     let currentAd = 1;
     setInterval(() => {
       document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
@@ -145,7 +150,7 @@
       });
     })();
 
-    // Close ad
+    // Close Ad Button
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
